[package]
name = "parser"
version = "0.1.0"
authors = ["Andrea Moretti <axyzxp@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
error = { path = "../error" }
tokenizer = { path = "../tokenizer" }
macros = { path = "../macros" }
